--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
+body {
   font-family: Gilroy, sans-serif !important;
 }
 
@@ -19,7 +19,29 @@ body{
   position: absolute;
   bottom: 0px;
   left: 0px;
-  background-image: linear-gradient(rgba(81, 163, 254, 0) 0%, rgb(81, 163, 254) 84%);
+  background-image: linear-gradient(
+    rgba(81, 163, 254, 0) 0%,
+    rgb(81, 163, 254) 84%
+  );
+}
+.cardsGrid {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0px, 1fr));
+  gap: 0px 35px;
+}
+
+.cardsBtn{
+  border: 2px solid rgb(185, 218, 255);
+    border-radius: 10px;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 20px;
+    font-family: Gilroy, Arial, sans-serif;
+    font-weight: 700;
+    line-height: 25px;
+    padding: 8px 15px;
+    background-image: linear-gradient(rgb(141, 213, 79) 0%, rgb(90, 163, 28) 100%);
 }
 
 
