contected telegram bot

--- a/src/index.css
+++ b/src/index.css
@@ -96,3 +96,15 @@ body {
     transform: rotate(360deg);
   }
 }
+
+@layer utilities {
+  input[type="number"]::-webkit-outer-spin-button,
+  input[type="number"]::-webkit-inner-spin-button {
+    @apply appearance-none; 
+    margin: 0;
+  }
+
+  input[type="number"] {
+    @apply appearance-none;
+  }
+}
