--- a/src/index.css
+++ b/src/index.css
@@ -25,40 +25,42 @@ body {
   );
 }
 .cardsGrid {
-  width: 100%;
-  display: grid;
   grid-template-columns: repeat(2, minmax(0px, 1fr));
-  gap: 0px 35px;
-  
 }
 
-.cardsBtn{
+.cardsBtn {
   border: 2px solid rgb(185, 218, 255);
-    border-radius: 10px;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    font-size: 20px;
-    font-family: Gilroy, Arial, sans-serif;
-    font-weight: 700;
-    line-height: 25px;
-    padding: 8px 15px;
-    background-image: linear-gradient(rgb(141, 213, 79) 0%, rgb(90, 163, 28) 100%);
+  border-radius: 10px;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  font-size: 20px;
+  font-family: Gilroy, Arial, sans-serif;
+  font-weight: 700;
+  line-height: 25px;
+  padding: 8px 15px;
+  background-image: linear-gradient(
+    rgb(141, 213, 79) 0%,
+    rgb(90, 163, 28) 100%
+  );
 }
 
-.gridBtn{
+.gridBtn {
   border-radius: 10px;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    box-shadow: rgba(28, 54, 97, 0.3) 0px 10px 20px 0px;
-    background-image: linear-gradient(rgb(164, 232, 105) 0%, rgb(90, 175, 16) 100%);
-    position: relative;
-    overflow: hidden;
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: uppercase;
-    cursor: pointer;
-    padding: 20px;
-    display: flex;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  box-shadow: rgba(28, 54, 97, 0.3) 0px 10px 20px 0px;
+  background-image: linear-gradient(
+    rgb(164, 232, 105) 0%,
+    rgb(90, 175, 16) 100%
+  );
+  position: relative;
+  overflow: hidden;
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding: 20px;
+  display: flex;
 }
 .gridBtn:before {
   content: "";
@@ -67,11 +69,15 @@ body {
   top: 0px;
   width: 22%;
   height: 100%;
-  background-image: linear-gradient(rgb(141, 213, 79) 0%, rgb(90, 163, 28) 100%);
+  background-image: linear-gradient(
+    rgb(141, 213, 79) 0%,
+    rgb(90, 163, 28) 100%
+  );
 }
 
 @keyframes bounce {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateX(0);
   }
   50% {
@@ -82,7 +88,6 @@ body {
 .bounce-animation {
   animation: 800ms linear 0s infinite bounce;
 }
-
 
 .animation-rotation {
   animation: rotation 20s linear infinite;
@@ -96,3 +101,52 @@ body {
     transform: rotate(360deg);
   }
 }
+
+/* Programm */
+.programCard {
+  border: 4px solid rgb(255, 218, 146);
+  border-radius: 20px;
+  background-color: rgb(255, 255, 255);
+  padding: 20px 20px 30px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+/* result */
+.resultCard {
+  border: 4px solid rgb(223, 199, 254);
+  border-radius: 20px;
+  background-color: rgb(255, 255, 255);
+  padding: 20px;
+  position: relative;
+  display: flex;
+}
+/* tarif */
+.tarifCard {
+  border: 4px solid rgb(98, 172, 254);
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 90px 20px 30px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  max-width: 360px;
+}
+
+.tarifBtn{
+  border: 2px solid rgb(185, 218, 255);
+    border-radius: 10px;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 20px;
+    font-family: Gilroy, Arial, sans-serif;
+    font-weight: 700;
+    line-height: 25px;
+    padding: 8px 15px;
+    text-transform: uppercase;
+    display: inline-block;    
+}
+
+/* savol */
+
